public/css/screen.css
#mainContent {
	margin-top: 60px;
}

.settings-del-btn {
	width: 25px;
	height: 25px;
	padding: 2px 0px 0px 0px;
	margin-top: -2px;
}

a.videoLink {
	height: 42px;
}

.videoWeb {
	height: 42px; 
	width: 42px; 
	margin-top: -10px; 
	margin-right: -15px;
	padding-top: 10px;
}

#videoList li a.videoWeb {
	-webkit-border-radius: 0 0px 0px 0;
	border-radius: 0 0px 0px 0;
}

#videoList li:first-child a.videoWeb {
	-webkit-border-radius: 0 4px 0px 0;
	border-radius: 0 4px 0px 0;
}

#videoList li:last-child a.videoWeb {
	-webkit-border-radius: 0 0px 4px 0;
	border-radius: 0 0px 4px 0;
}

.btn-group {
	width: 100%;
}

.folderBtn {
	width: 100%; 
	text-align: left;
}

.folderBtn i {
	margin-top: 5px;
}

.leftBtn {
	text-align: left;
}

.rightBtn {
	width: 42px;
}

.list-group .btn-group .btn {
	border-top: 0px;
	-webkit-border-radius: 0 0px 0px 0;
	border-radius: 0 0px 0px 0;
}

.list-group .btn-group:first-child .btn {
	border-top: 1px solid #CCC;
	-webkit-border-radius: 0 0px 0px 0;
	border-radius: 0 0px 0px 0;
}

.list-group .btn-group:first-child .folderBtn {
	-webkit-border-top-left-radius: 4px;
	-moz-border-radius-topleft: 4px;
	border-top-left-radius: 4px;
	-webkit-border-top-right-radius: 4px;
	-moz-border-radius-topright: 4px;
	border-top-right-radius: 4px;
}

.list-group .btn-group:last-child .folderBtn {
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-radius-bottomleft: 4px;
	border-bottom-left-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;
	-moz-border-radius-bottomright: 4px;
	border-bottom-right-radius: 4px;
}

.list-group .btn-group:first-child .leftBtn {
	-webkit-border-top-left-radius: 4px;
	-moz-border-radius-topleft: 4px;
	border-top-left-radius: 4px;
}

.list-group .btn-group:last-child .leftBtn {
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-radius-bottomleft: 4px;
	border-bottom-left-radius: 4px;
}

.list-group .btn-group:first-child .rightBtn {
	-webkit-border-top-right-radius: 4px;
	-moz-border-radius-topright: 4px;
	border-top-right-radius: 4px;
}

.list-group .btn-group:last-child .rightBtn {
	-webkit-border-bottom-right-radius: 4px;
	-moz-border-radius-bottomright: 4px;
	border-bottom-right-radius: 4px;
}

#fileList li {
	height: 60px;
}

#fileList li span.file-text {
	font-size: 20px;
	display: block;
	width: 180px;
	height: 30px;
	text-overflow: ellipsis;
	overflow: hidden;
	float: left;
}

@media (min-width: 600px) {
	#fileList li span.file-text {
		width: 400px;
	}
}


#fileList li a span.badge {
	margin-left: 20px;
	background-color: #337ab7;
	border-color: #2e6da4;
	float: right;
}

#fileList > a {
	font-size: 20px;
	height: 60px;
	text-overflow: ellipsis;
	overflow: hidden;
}

